# embedded_system

./: BUZZER_LOGIC_EXPLANATION.md  CMakeLists.txt  Kconfig.projbuild  README.md  WEBSERVER_GUIDE.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
docs/: freertos_tutorial.md
main/: CMakeLists.txt  config.h  dht22.c  dht22.h  main.c  ssd1306.c  ssd1306.h  webserver.c  webserver.h  wifi.c  wifi.h
